[dist fix] Added PubNub as sponsor. Minified some other sponsor logos.

--- a/public/index.html
+++ b/public/index.html
@@ -458,6 +458,7 @@ console.log("... It’s Computer SCIENCE.");
           <a href="http://saucelabs.com/" target="_blank"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
           <a href="http://spotify.com/" style="padding-bottom: 20px" target="_blank"><img width="300" src="img/sponsors/spotify.png" alt /></a>
           <a href="http://mozilla.org/" target="_blank"><img width="300" src="img/sponsors/mozilla.png" alt /></a>
+          <a href="http://pubnub.com/" target="_blank"><img width="300" src="img/sponsors/pubnub.png" alt /></a>
           <a href="http://nytimes.com/" style="padding-bottom: 20px" target="_blank"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
           <a href="http://work-bench.com/" style="padding-bottom: 0" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
           <a href="http://yld.io/" target="_blank"><img width="150" src="img/sponsors/yld.png" alt /></a>
