[doc] Added more information about location(s).

--- a/public/index.html
+++ b/public/index.html
@@ -447,6 +447,28 @@ console.log("... It’s Computer SCIENCE.");
           <h1>Location</h1>
         </div>
 
+        <div class="location05">
+          <h3>Location05</h3>
+          <h4>Location05, 509 West 34th St.</h4>
+
+          <p>Located on the West Side of Manhattan, Location05 is on <strong>34th Street between 10th and 11th Avenue.</strong> It is easily accessible from the Penn Station stop on the </br>
+          <img src="/img/subway/1.png" /> <img src="/img/subway/2.png" /> <img src="/img/subway/3.png" /> <img src="/img/subway/a.png" /> <img src="/img/subway/c.png" /> and <img src="/img/subway/e.png" /> trains.</p>
+        </div>
+
+        <div class="cruise">
+          <h3>Statue of Liberty Cruise</h3>
+          <h4>Pier 61, Chelsea Piers</h4>
+
+          <p>Boarding begins at 8:00pm from <strong>Pier 61 at Chelsea Piers.</strong> Our boat will be departing promptly at 8:30pm, so if it is not there when you arrive, remember: <em>it did not leave you behind, you missed it.</em></p>
+        </div>
+
+        <div class="cruise">
+          <h3>LightBox</h3>
+          <h4>339 W 38th Street</h4>
+
+          <p>Just a few blocks away from the venue, LightBox is <strong>on the north side of 38th Street between 8th and 9th Avenue.</strong> The walls will be programmable Javascript supporting Canvas and SVG.</p>
+        </div>
+
         <div class="location">
           <iframe src="https://mapsengine.google.com/map/embed?mid=zSNP0pcX1vhk.kLl4M8HVz-vw" width="990" height="500"></iframe>
         </div>
