[fix] Only Last Minute tickets still available!

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
       <div id="action" class="action">
         <h2>
-          <a href="https://ti.to/empirejs/empirejs-2014">Regular Tickets available on Tito</a>
+          <a href="https://ti.to/empirejs/empirejs-2014">Last Minute Tickets available on Tito</a>
         </h2>
       </div>
 
