--- a/public/index.html
+++ b/public/index.html
@@ -239,19 +239,31 @@ console.log("... It’s Computer SCIENCE.");
           </thead>
           <tbody>
             <tr class="break breakfast">
-              <td>8:00am</td><td><registration></registration></td><td><breakfast></breakfast></td>
+              <td>8:00am</td>
+              <td>
+                <registration></registration><br/>
+                Sponsored by <a href="http://automattic.com/" target="_blank">Etsy</a>
+              </td>
+              <td>
+                <breakfast></breakfast><br/>
+                Sponsored by <a href="http://automattic.com/" target="_blank">Automattic</a>
+              </td>
             </tr>
             <tr>
               <td>9:00am</td>
               <td>
                 <img src="/img/speakers/jenn-schiffer.jpg" />
                 <talk>Sorting Algorithms in Javascript</talk>
-                <speaker><a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/clay-smith.jpg" />
                 <talk>Build Artifacts in Source Control</talk>
-                <speaker><a href="http://twitter.com/smithclay" target="_blank">Clay Smith</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/smithclay" target="_blank">Clay Smith</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -259,12 +271,16 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <img src="/img/speakers/trevor-landau.jpg" />
                 <talk>Anatomy of a Successful Module</talk>
-                <speaker><a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/jeremy-stashewsky.jpg" />
                 <talk>Preventing XSS &amp; CSRF</talk>
-                <speaker><a href="http://twitter.com/jstash" target="_blank">Jeremy Stashewsky</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/jstash" target="_blank">Jeremy Stashewsky</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -272,12 +288,16 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <img src="/img/speakers/domenic-denicola.jpg" />
                 <talk>The Final Frontier</talk>
-                <speaker><a href="http://twitter.com/domenic" target="_blank">Domenic Denicola</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/domenic" target="_blank">Domenic Denicola</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/rick-waldron.jpg" />
                 <talk>Bits of Nodebots.Next</talk>
-                <speaker><a href="http://twitter.com/rwaldron" target="_blank">Rick Waldron</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/rwaldron" target="_blank">Rick Waldron</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -285,12 +305,16 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <img src="/img/speakers/kassandra-perch.jpg" />
                 <talk>BeagleBone Black: The versatile JS underdog</talk>
-                <speaker><a href="http://twitter.com/kassandra_perch" target="_blank">Kassandra Perch</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/kassandra_perch" target="_blank">Kassandra Perch</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/alyssa-ravasio.jpg" />
                 <talk>Hacking Webforms with Phantom.js</talk>
-                <speaker><a href="http://twitter.com/alyraz" target="_blank">Alyssa Ravasio</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/alyraz" target="_blank">Alyssa Ravasio</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -298,29 +322,44 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <img src="/img/speakers/drew-petersen.jpg" />
                 <talk>Exploiting a Pocket Universe</talk>
-                <speaker><a href="http://twitter.com/KirbySaysHi" target="_blank">Drew Petersen</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/KirbySaysHi" target="_blank">Drew Petersen</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/guillermo-rauch.jpg" />
                 <talk>MyDB</talk>
-                <speaker><a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a>
+                </speaker>
               </td>
             </tr>
             <tr class="break lunch">
-              <td>12:10pm</td><td><lunch></lunch></td><td><lunch></lunch></td>
+              <td>12:10pm</td>
+              <td>
+                <lunch></lunch><br/>
+                Sponsored by <a href="http://bazaarvoice.com/" target="_blank">BazaarVoice</a>
+              </td>
+              <td>
+                <lunch></lunch><br/>
+                Sponsored by <a href="http://palantir.com/" target="_blank">Palantir</a>
+              </td>
             </tr>
             <tr>
               <td>1:10pm</td>
               <td>
                 <img src="/img/speakers/tom-dale.jpg" />
                 <talk>The Road to Web Components</talk>
-                <speaker><a href="http://twitter.com/tomdale" target="_blank">Tom Dale</a></speaker>
-
+                <speaker>
+                  <a href="http://twitter.com/tomdale" target="_blank">Tom Dale</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/arnout-kazemier.jpg" />
                 <talk>BigPipe</talk>
-                <speaker><a href="http://twitter.com/3rdEden" target="_blank">Arnout Kazemier</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/3rdEden" target="_blank">Arnout Kazemier</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -328,12 +367,16 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <img src="/img/speakers/daniel-cousineau.jpg" />
                 <talk>Backbone.Marionette and RequireJS</talk>
-                <speaker><a href="http://twitter.com/dcousineau" target="_blank">Daniel Cousineau</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/dcousineau" target="_blank">Daniel Cousineau</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/sean-mccullough.jpg" />
                 <talk>Transitioning Groupon to node.js</talk>
-                <speaker><a href="http://twitter.com/mcculloughsean" target="_blank">Sean McCullough</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/mcculloughsean" target="_blank">Sean McCullough</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -341,28 +384,43 @@ console.log("... It’s Computer SCIENCE.");
              <td>
                 <img src="/img/speakers/peter-muller.jpg" />
                 <talk>The no build system build system</talk>
-                <speaker><a href="http://twitter.com/_munter_" target="_blank">Peter Müller</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/_munter_" target="_blank">Peter Müller</a>
+                </speaker>
              </td>
              <td>
                 <img src="/img/speakers/john-resig.jpg" />
                 <talk>Hacking Art with Node.js and Image Analysis</talk>
-                <speaker><a href="http://twitter.com/jeresig" target="_blank">John Resig</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/jeresig" target="_blank">John Resig</a>
+                </speaker>
               </td>
             </tr>
             <tr class="break coffee">
-              <td>3:00pm</td><td><coffee></coffee></td><td><coffee></coffee></td>
+              <td>3:00pm</td>
+              <td>
+                <coffee></coffee>
+              </td>
+              <td>
+                <coffee></coffee><br/>
+                Sponsored by <a href="http://theladders.com/" target="_blank">TheLadders</a>
+              </td>
             </tr>
             <tr>
               <td>3:30pm</td>
               <td>
                 <img src="/img/speakers/mark-wunsch.jpg" />
                 <talk>Front-end Style Guides and Greenfields</talk>
-                <speaker><a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/michelle-bu.jpg" />
                 <talk>WebRTC can be easy</talk>
-                <speaker><a href="http://twitter.com/hazelcough" target="_blank">Michelle Bu</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/hazelcough" target="_blank">Michelle Bu</a>
+                </speaker>
               </td>
             </tr>
             <tr>
@@ -370,7 +428,9 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <img src="/img/speakers/eric-shepherd.jpg" />
                 <talk>Gadgets for Holistic Web Detection</talk>
-                <speaker><a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a></speaker>
+                <speaker>
+                  <a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a>
+                </speaker>
               </td>
               <td>
                 <img src="/img/speakers/kirill-cherkashin.jpg" />
@@ -420,22 +480,22 @@ console.log("... It’s Computer SCIENCE.");
             <tr class="break party">
               <td>8:00pm</td>
               <td>
-                <party>
-                  Statue of Liberty Cruise <br/>
-                  <em>(Dinner &amp; Drinks provided on-board)</em>
-                </party>
+                <cruise></cruise><br/>
+                Dinner &amp; Drinks provided on-board
               </td>
               <td>
-                <party>
-                  Closing Party at LightBox <br/>
-                  <em>with programmable walls.</em>
-                </party>
+                <party></party><br/>
+                with programmable walls!
               </td>
             </tr>
             <tr>
               <td></td>
-              <td></td>
-              <td>Sponsored by <img src="img/sponsors/bloomberg.png" alt="Bloomberg" /></td>
+              <td>
+                Sponsored by <a href="http://condenast.com/" target="_blank"><img src="img/sponsors/condenast.png" alt="CondeNast" /></a>
+              </td>
+              <td>
+                Sponsored by <a href="http://bloomberg.com/" target="_blank"><img src="img/sponsors/bloomberg.png" alt="Bloomberg" /></a>
+              </td>
             </tr>
           </tbody>
           </table>
