[fix] Fix href copy/paste error.

--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@ console.log("... It’s Computer SCIENCE.");
               </td>
               <td>
                 <breakfast></breakfast><br/>
-                Sponsored by <a href="http://automattic.com/" target="_blank">Automattic</a>
+                Sponsored by <a href="http://etsy.com/" target="_blank">Automattic</a>
               </td>
             </tr>
             <tr>
