[fix] Update reversed links.

--- a/public/index.html
+++ b/public/index.html
@@ -242,11 +242,11 @@ console.log("... It’s Computer SCIENCE.");
               <td>8:00am</td>
               <td>
                 <registration></registration><br/>
-                Sponsored by <a href="http://automattic.com/" target="_blank">Etsy</a>
+                Sponsored by <a href="http://etsy.com/" target="_blank">Etsy</a>
               </td>
               <td>
                 <breakfast></breakfast><br/>
-                Sponsored by <a href="http://etsy.com/" target="_blank">Automattic</a>
+                Sponsored by <a href="http://automattic.com/" target="_blank">Automattic</a>
               </td>
             </tr>
             <tr>
