[fix] Updated talk title from @guille. Better late than never!

--- a/public/index.html
+++ b/public/index.html
@@ -328,7 +328,7 @@ console.log("... It’s Computer SCIENCE.");
               </td>
               <td>
                 <img src="/img/speakers/guillermo-rauch.jpg" />
-                <talk>MyDB</talk>
+                <talk>Realtime rich text collaboration</talk>
                 <speaker>
                   <a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a>
                 </speaker>
