[doc] Adding videos and slides

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <li><a href="/#/information" title="Information">Information</a></li>
           <li><a href="/#/speakers" title="Speakers">Speakers</a></li>
           <li><a href="/#/sponsors" title="Sponsors">Sponsors</a></li>
-          <li><a href="/#/schedule" title="Schedule">Schedule</a></li>
+          <li><a href="/#/videos" title="Videos">Videos</a></li>
           <li><a href="/#/location" title="Location">Location</a></li>
           <li><a href="https://tito.io/empirejs/empirejs-2014" title="Tickets" target="_blank">Tickets</a></li>
           <li><a href="/#/love" title="Contacts">&lt;3</a></li>
@@ -225,9 +225,9 @@ console.log("... It’s Computer SCIENCE.");
         </div>
       </div>
 
-     <div id="schedule" class="content">
+     <div id="videos" class="content">
         <div class="subheader">
-          <h1>Schedule</h1>
+          <h1>Videos &amp; Schedule</h1>
         </div>
 
         <div class="schedule">
@@ -252,15 +252,20 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>9:00am</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/uRyqlhjXYQI" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/jenn-schiffer.jpg" />
-                <talk>Sorting Algorithms in Javascript</talk>
+                <talk><a href="http://pancaketheorem.com/stuff/meetups/empirejs/" title="slides" target="_blank">Sorting Algorithms in Javascript</a></talk>
                 <speaker>
                   <a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/KxqVtsnP6Ko" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/clay-smith.jpg" />
-                <talk>Build Artifacts in Source Control</talk>
+                <talk><a href="http://www.slideshare.net/smithclay/javascript-apps-at-build-artifacts" title="slides" target="_blank">Build Artifacts in Source Control</a>
+                </talk>
                 <speaker>
                   <a href="http://twitter.com/smithclay" target="_blank">Clay Smith</a>
                 </speaker>
@@ -269,15 +274,19 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>9:40am</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/BNnRpiHxESc" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/trevor-landau.jpg" />
-                <talk>Anatomy of a Successful Module</talk>
+                <talk><a href="https://github.com/landau/prezzos/tree/master/empirejs-2014" title="slides" target="_blank">Anatomy of a Successful Module</a></talk>
                 <speaker>
                   <a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/_jubb3g1HVg" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/jeremy-stashewsky.jpg" />
-                <talk>Preventing XSS &amp; CSRF</talk>
+                <talk><a href="http://stash.github.io/empirejs-2014/#/titleSlide" title="slides" target="_blank">Preventing XSS &amp; CSRF</a></talk>
                 <speaker>
                   <a href="http://twitter.com/jstash" target="_blank">Jeremy Stashewsky</a>
                 </speaker>
@@ -286,15 +295,19 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>10:20am</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/XzRBgj1AJYA" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/domenic-denicola.jpg" />
-                <talk>The Final Frontier</talk>
+                <talk><a href="http://www.slideshare.net/domenicdenicola/the-final-frontier-34294064" title="slides" target="_blank">The Final Frontier</a></talk>
                 <speaker>
                   <a href="http://twitter.com/domenic" target="_blank">Domenic Denicola</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/0-6_iA1zZDk" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/rick-waldron.jpg" />
-                <talk>Bits of Nodebots.Next</talk>
+                <talk><a href="https://dl.dropboxusercontent.com/u/3531958/empirejs-2014/index.html" title="slides" target="_blank">Bits of Nodebots.Next</a></talk>
                 <speaker>
                   <a href="http://twitter.com/rwaldron" target="_blank">Rick Waldron</a>
                 </speaker>
@@ -303,13 +316,17 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>11:00am</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/OXWBaDsmvys" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/kassandra-perch.jpg" />
-                <talk>BeagleBone Black: The versatile JS underdog</talk>
+                <talk><a href="http://slides.com/kperch/deck" title="slides" target="_blank">BeagleBone Black: The versatile JS underdog</a></talk>
                 <speaker>
                   <a href="http://twitter.com/kassandra_perch" target="_blank">Kassandra Perch</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/HYKP0vZsTSI" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/alyssa-ravasio.jpg" />
                 <talk>Hacking Webforms with Phantom.js</talk>
                 <speaker>
@@ -320,15 +337,19 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>11:40am</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/p1dINlm1W9M" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/drew-petersen.jpg" />
-                <talk>Exploiting a Pocket Universe</talk>
+                <talk><a href="https://github.com/kirbysayshi/multithreaded-game-example/blob/gh-pages/docs/empirejs_2014-05-04.js" title="slides" target="_blank">Exploiting a Pocket Universe</a></talk>
                 <speaker>
                   <a href="http://twitter.com/KirbySaysHi" target="_blank">Drew Petersen</a>
                 </speaker>
               </td>
               <td>
-                <img src="/img/speakers/guillermo-rauch.jpg" />
-                <talk>Realtime rich text collaboration</talk>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/0jwygdZW-r0" frameborder="0" allowfullscreen></iframe>
+
+<img src="/img/speakers/guillermo-rauch.jpg" />
+                <talk><a href="https://drive.google.com/file/d/0B7I9pdHuJgB4Tm1PaGc3UFpub1U/edit?usp=sharing" title="slides" target="_blank">Realtime rich text collaboration</a></talk>
                 <speaker>
                   <a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a>
                 </speaker>
@@ -348,15 +369,19 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>1:10pm</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/yLyyXHhSl8w" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/tom-dale.jpg" />
-                <talk>The Road to Web Components</talk>
+                <talk><a href="https://speakerdeck.com/tomdale/the-road-to-web-components" title="slides" target="_blank">The Road to Web Components</a></talk>
                 <speaker>
                   <a href="http://twitter.com/tomdale" target="_blank">Tom Dale</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/sYArq4XhdFo" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/arnout-kazemier.jpg" />
-                <talk>BigPipe</talk>
+                <talk><a href="https://speakerdeck.com/3rdeden/bigpipe" title="slides" target="_blank">BigPipe</a></talk>
                 <speaker>
                   <a href="http://twitter.com/3rdEden" target="_blank">Arnout Kazemier</a>
                 </speaker>
@@ -365,32 +390,44 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>1:50pm</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/4K4JKtAGPu4" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/daniel-cousineau.jpg" />
-                <talk>Backbone.Marionette and RequireJS</talk>
+                <talk>
+                  <a href="https://speakerdeck.com/dcousineau/pulling-the-strings-backbone-dot-marionette-and-require-dot-js-for-single-page-apps" title="slides" target="_blank">Backbone.Marionette and RequireJS</a>
+                </talk>
                 <speaker>
                   <a href="http://twitter.com/dcousineau" target="_blank">Daniel Cousineau</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/TWVblTpUlxM" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/sean-mccullough.jpg" />
-                <talk>Transitioning Groupon to node.js</talk>
+                <talk>
+                  <a href="http://www.slideshare.net/mcculloughsean/transitioning-groupon-to-nodejs-empirejs-2014" title="slides" target="_blank">Transitioning Groupon to node.js</a>
+                </talk>
                 <speaker>
                   <a href="http://twitter.com/mcculloughsean" target="_blank">Sean McCullough</a>
                 </speaker>
               </td>
             </tr>
             <tr>
-             <td>2:30pm</td>
-             <td>
+              <td>2:30pm</td>
+              <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/N_gRlmmF4Rc" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/peter-muller.jpg" />
-                <talk>The no build system build system</talk>
+                <talk><a href="https://github.com/Munter/no-build-system" title="slides" target="_blank">The no build system build system</a></talk>
                 <speaker>
                   <a href="http://twitter.com/_munter_" target="_blank">Peter Müller</a>
                 </speaker>
-             </td>
-             <td>
+              </td>
+              <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/_JrJdD2Ssnk" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/john-resig.jpg" />
-                <talk>Hacking Art with Node.js and Image Analysis</talk>
+                <talk><a href="http://www.slideshare.net/jeresig/empirejs" title="slides" target="_blank">Hacking Art with Node.js and Image Analysis</a></talk>
                 <speaker>
                   <a href="http://twitter.com/jeresig" target="_blank">John Resig</a>
                 </speaker>
@@ -409,15 +446,19 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>3:30pm</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/JQHAQ_ckrXk" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/mark-wunsch.jpg" />
-                <talk>Front-end Style Guides and Greenfields</talk>
+                <talk><a href="https://speakerdeck.com/mwunsch/greenfields-and-front-end-style-guides" title="slides" target="_blank">Front-end Style Guides and Greenfields</a></talk>
                 <speaker>
                   <a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/ONxw9R1Fxfs" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/michelle-bu.jpg" />
-                <talk>WebRTC can be easy</talk>
+                <talk><a href="http://michelle.github.io/webrtc-can-be-easy" title="slides" target="_blank">WebRTC can be easy</a></talk>
                 <speaker>
                   <a href="http://twitter.com/hazelcough" target="_blank">Michelle Bu</a>
                 </speaker>
@@ -426,16 +467,20 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>4:10pm</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/VpqPpbw_gns" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/eric-shepherd.jpg" />
-                <talk>Gadgets for Holistic Web Detection</talk>
+                <talk><a href="http://arkitrave.com/speaking/empire-2014/" title="slides" target="_blank">Gadgets for Holistic Web Detection</a></talk>
                 <speaker>
                   <a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/3ZqTvexCtZM" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/kirill-cherkashin.jpg" />
                 <img src="/img/speakers/tsering-shrestha.jpg" />
-                <talk>The hidden benefits of static analysis</talk>
+                <talk><a href="https://docs.google.com/presentation/d/1cZujD518o38bQtYpmj3sxfCn0ZREsHPM5HvyszncT-c/pub?start=false&loop=false&delayms=3000#slide=id.g27604fd8e_0164" title="slides" target="_blank">The hidden benefits of static analysis</a></talk>
                 <speaker>
                   <a href="http://twitter.com/z6Dabrata" target="_blank">Kirill Cherkashin</a>
                   <a href="http://twitter.com/ustamansangat" target="_blank">Tsering Shrestha</a>
@@ -445,15 +490,19 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>4:50pm</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/rcjUR4icvoQ" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/amjad-masad.jpg" />
-                <talk>Lesser Known Debugging Techniques</talk>
+                <talk><a href="https://speakerdeck.com/amasad/javascript-debugging" title="slides" target="_blank">Lesser Known Debugging Techniques</a></talk>
                 <speaker>
                   <a href="http://twitter.com/amasad" target="_blank">Amjad Masad</a>
                 </speaker>
               </td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/kXY9hIPKuLQ" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/ben-newman.jpg" />
-                <talk>Easing into ECMAScript 6 and Beyond</talk>
+                <talk><a href="http://benjamn.github.io/empirejs-talk/" title="slides" target="_blank">Easing into ECMAScript 6 and Beyond</a></talk>
                 <speaker>
                   <a href="http://twitter.com/benjamn" target="_blank">Ben Newman</a>
                 </speaker>
@@ -462,16 +511,20 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>5:30pm</td>
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/ajo8ZKsdSLg" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/david-byrd.jpg" />
-                <talk>Code Memes</talk>
+                <talk><a href="https://cloudup.com/ccsedda7sxS" title="slides" target="_blank">Code Memes</a></talk>
                 <speaker>
                   <a href="http://twitter.com/thebyrd" target="_blank">David Byrd</a>
                 </speaker>
               </td>
 
               <td>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/W6tP3nJp3NM" frameborder="0" allowfullscreen></iframe>
+
                 <img src="/img/speakers/vince-allen.jpg" />
-                <talk>Pixel Art and Javascript</talk>
+                <talk><a href="http://vinceallenvince.github.io/EmpireJS2014/pdf/EmpireJS-2014-full.pdf" title="slides" target="_blank">Pixel Art and Javascript</a></talk>
                 <speaker>
                   <a href="http://twitter.com/vinceallenvince" target="_blank">Vince Allen</a>
                 </speaker>
@@ -571,10 +624,10 @@ console.log("... It’s Computer SCIENCE.");
           <span><a href="http://github.com/indexzero" target="_blank">@indexzero</a>, </span>
           <span><a href="http://github.com/buritica" target="_blank">@buritica</a>, </span>
           <span><a href="http://github.com/justinjmoses" target="_blank">@justinjmoses</a>, </span>
+          <span><a href="http://github.com/ajpiano" target="_blank">@ajpiano</a>, </span>
           <span><a href="http://github.com/lopezcatherine" target="_blank">@lopezcatherine</a>, </span>
           <span><a href="http://github.com/sarajo" target="_blank">@sarajo</a>, </span>
           <span><a href="http://github.com/brianloveswords" target="_blank">@brianloveswords</a>, </span>
-          <span><a href="http://github.com/ajpiano" target="_blank">@ajpiano</a>, </span>
           <span><a href="http://github.com/copasetickid" target="_blank">@copasetickid</a></span>
         </p>
       </div>
@@ -590,7 +643,7 @@ console.log("... It’s Computer SCIENCE.");
       'welcome': run_route
     , '/information': run_route
     , '/speakers': run_route
-    , '/schedule': run_route
+    , '/videos': run_route
     , '/sponsors': run_route
     , '/love': run_route
     , '/location': run_route
