[doc] Fixing Clays video

--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@ console.log("... It’s Computer SCIENCE.");
                 </speaker>
               </td>
               <td>
-                <iframe width="373" height="210" src="//www.youtube.com/embed/KxqVtsnP6Ko" frameborder="0" allowfullscreen></iframe>
+                <iframe width="373" height="210" src="//www.youtube.com/embed/696f_EQpW94" frameborder="0" allowfullscreen></iframe>
 
                 <img src="/img/speakers/clay-smith.jpg" />
                 <talk><a href="http://www.slideshare.net/smithclay/javascript-apps-at-build-artifacts" title="slides" target="_blank">Build Artifacts in Source Control</a>
